# bare_actor

./: Cargo.toml
migrations/: 20240203075805_init.sql
src/: actors.rs  main.rs
src/actors/: wallet_balance_actor.rs  wallet_persistent_actor.rs  wallet_table_actor.rs
