[package]
name = "bare_actor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.1"
anyhow = "1.0.79"
futures = "0.3.30"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
sqlx = { version = "0.7.3", features = ["mysql", "runtime-tokio","chrono"] }
tokio = { version = "1.35.1", features = ["full"] }
